--- a/index.html
+++ b/index.html
@@ -139,6 +139,22 @@
     </div>
   </div>
 </section>
+<section id="memos" class="bg-gray-50 py-16">
+  <div class="container mx-auto px-6 text-center max-w-2xl">
+    <h2 class="text-3xl font-bold mb-4">📬 Private Memos for High-Growth Founders</h2>
+    <p class="text-lg mb-6 text-gray-700">
+      Tactical finance, fundraising, and investor-readiness strategies used by VC-backed startups. Written by Samuel Mwendwa, CFA.
+    </p>
+    <iframe src="https://sammwendwa.substack.com/embed" 
+            width="100%" 
+            height="150" 
+            style="border:1px solid #ccc; border-radius:6px; background:white;" 
+            frameborder="0" 
+            scrolling="no">
+    </iframe>
+    <p class="text-sm text-gray-500 mt-3">Join 1,000+ startup leaders reading monthly finance war stories and raise-ready insights.</p>
+  </div>
+</section>
 
 <script>
   AOS.init();
