--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
     </div>
   </div>
 </section>
+<!-- Private Memos Newsletter -->
 <section id="memos" class="bg-gray-50 py-16">
   <div class="container mx-auto px-6 text-center max-w-2xl">
     <h2 class="text-3xl font-bold mb-4">📬 Private Memos for High-Growth Founders</h2>
