--- a/index.html
+++ b/index.html
@@ -360,3 +360,51 @@
     </div>
   </div>
 </section>
+<footer class="bg-gray-900 text-gray-300 py-10 mt-20">
+  <div class="max-w-7xl mx-auto px-6 grid grid-cols-1 md:grid-cols-3 gap-8 items-start">
+    
+    <!-- Column 1: Brand -->
+    <div>
+      <h3 class="text-xl font-bold text-white mb-2">VCLaunchPad™</h3>
+      <p class="text-sm text-gray-400 mb-4">Sequoia-tier CFO & fundraising strategy for scale-stage fintechs.</p>
+      <p class="text-xs text-gray-500">© 2025 Samuel Finance Solutions. All rights reserved.</p>
+    </div>
+
+    <!-- Column 2: Navigation -->
+    <div>
+      <h4 class="font-semibold text-white mb-3">Explore</h4>
+      <ul class="space-y-2 text-sm">
+        <li><a href="#scorecard" class="hover:text-yellow-400 transition">Funding Readiness Quiz</a></li>
+        <li><a href="#offers" class="hover:text-yellow-400 transition">CFO Offer Ladder</a></li>
+        <li><a href="#framework" class="hover:text-yellow-400 transition">Smart Scale CFO™</a></li>
+        <li><a href="#booking" class="hover:text-yellow-400 transition">Book Strategy Call</a></li>
+      </ul>
+    </div>
+
+    <!-- Column 3: Newsletter -->
+    <div>
+      <h4 class="font-semibold text-white mb-3">📬 ScaleSmart™ Memos</h4>
+      <p class="text-sm mb-3 text-gray-400">Monthly founder memos on finance, ops, and VC traction.</p>
+      <form action="https://substack.com/@scalesmart/subscribe" method="GET" target="_blank" class="flex items-center space-x-2">
+        <input type="email" name="email" placeholder="you@startup.com" required class="w-full px-3 py-2 rounded-md text-sm text-gray-900">
+        <button type="submit" class="bg-yellow-400 text-gray-900 font-semibold px-4 py-2 rounded-md hover:bg-yellow-300 transition">Join</button>
+      </form>
+      <p class="text-xs text-gray-500 mt-3">
+        Or email us directly: <a href="mailto:team@vclaunchpad.com" class="underline hover:text-yellow-400">team@vclaunchpad.com</a>
+      </p>
+    </div>
+
+  </div>
+
+  <!-- Bottom Strip -->
+  <div class="border-t border-gray-700 mt-10 pt-6 text-center text-xs text-gray-500 px-6">
+    Built with integrity, spreadsheets, and Sequoia-level results.
+  </div>
+</footer>
+footer input[type="email"]::placeholder {
+  color: #9CA3AF;
+}
+footer input[type="email"]:focus {
+  outline: 2px solid #FBBF24;
+  outline-offset: 2px;
+}
