--- a/index.html
+++ b/index.html
@@ -405,18 +405,23 @@
 
   </div>
 
-  <!-- Bottom Strip -->
+ <!-- Bottom Strip -->
+<footer>
   <div class="border-t border-gray-700 mt-10 pt-6 text-center text-xs text-gray-500 px-6">
     Built with integrity, spreadsheets, and Sequoia-level results.
   </div>
 </footer>
-footer input[type="email"]::placeholder {
-  color: #9CA3AF;
-}
-footer input[type="email"]:focus {
-  outline: 2px solid #FBBF24;
-  outline-offset: 2px;
-}
+
+<style>
+  footer input[type="email"]::placeholder {
+    color: #9CA3AF;
+  }
+  footer input[type="email"]:focus {
+    outline: 2px solid #FBBF24;
+    outline-offset: 2px;
+  }
+</style>
+
 
   <!-- AOS Initialization Fix -->
   <script>
