--- a/index.html
+++ b/index.html
@@ -394,12 +394,12 @@
     <div>
       <h4 class="font-semibold text-white mb-3">📬 ScaleSmart™ Memos</h4>
       <p class="text-sm mb-3 text-gray-400">Monthly founder memos on finance, ops, and VC traction.</p>
-      <form action="https://substack.com/@scalesmart/subscribe" method="GET" target="_blank" class="flex items-center space-x-2">
+      <form action="https://substack.com/@scalesmart/" method="GET" target="_blank" class="flex items-center space-x-2">
         <input type="email" name="email" placeholder="you@startup.com" required class="w-full px-3 py-2 rounded-md text-sm text-gray-900">
         <button type="submit" class="bg-yellow-400 text-gray-900 font-semibold px-4 py-2 rounded-md hover:bg-yellow-300 transition">Join</button>
       </form>
       <p class="text-xs text-gray-500 mt-3">
-        Or email us directly: <a href="mailto:team@vclaunchpad.com" class="underline hover:text-yellow-400">team@vclaunchpad.com</a>
+        Or email us directly: <a href="mailto:nexlifysolutions.team@gmail.com" class="underline hover:text-yellow-400">team@vclaunchpad.com</a>
       </p>
     </div>
 
