--- a/index.html
+++ b/index.html
@@ -420,6 +420,163 @@
 
   </div>
 
+<section id="become-expert" class="bg-blue-50 py-16 px-6 md:px-16 lg:px-32 max-w-7xl mx-auto rounded-lg shadow-lg text-blue-900">
+  <h2 class="text-4xl font-extrabold mb-6 text-center">Build Your Flexible<br>Finance Career with VCReady</h2>
+  <p class="max-w-3xl mx-auto mb-8 text-lg">
+    Earn more with top-tier clients matched just for you. Many of our experts land projects within 30 days.
+  </p>
+  <div class="text-center mb-12">
+    <a href="#apply" class="inline-block bg-yellow-400 text-blue-900 font-bold py-3 px-8 rounded shadow-lg hover:bg-yellow-300 transition">
+      Apply Now
+    </a>
+  </div>
+
+  <div class="grid md:grid-cols-2 gap-12 mb-16">
+    <div>
+      <h3 class="text-2xl font-bold mb-4">Exclusive Opportunities Tailored to Your Expertise</h3>
+      <p class="mb-6">Grow your pipeline, connect with premium clients, and expand your business on your terms.</p>
+      
+      <ul class="space-y-6">
+        <li>
+          <h4 class="font-semibold text-lg mb-1">Maximize Your Income</h4>
+          <p>Access exclusive clients and maximize your earnings with diversified projects.</p>
+        </li>
+        <li>
+          <h4 class="font-semibold text-lg mb-1">Smart Client Matching</h4>
+          <p>VCReady’s AI-driven platform connects you with clients who perfectly fit your skillset and goals.</p>
+        </li>
+        <li>
+          <h4 class="font-semibold text-lg mb-1">Work on Your Schedule</h4>
+          <p>Choose projects, set your rates, and control your work-life balance.</p>
+        </li>
+        <li>
+          <h4 class="font-semibold text-lg mb-1">Expand Service Offerings</h4>
+          <p>Grow your business by offering multiple services at different price points.</p>
+        </li>
+        <li>
+          <h4 class="font-semibold text-lg mb-1">Get Matched with Top Opportunities</h4>
+          <p>Automatically receive invitations to pitch on high-value projects.</p>
+        </li>
+      </ul>
+    </div>
+
+    <div>
+      <ul class="space-y-6">
+        <li>
+          <h4 class="font-semibold text-lg mb-1">Earn Passive Income</h4>
+          <p>Receive referral fees from expert and business connections.</p>
+        </li>
+        <li>
+          <h4 class="font-semibold text-lg mb-1">Boost Your Reputation</h4>
+          <p>Gather client feedback to enhance your professional profile.</p>
+        </li>
+        <li>
+          <h4 class="font-semibold text-lg mb-1">Track Your Success</h4>
+          <p>Monitor your earnings, project progress, and financial goals in one dashboard.</p>
+        </li>
+        <li>
+          <h4 class="font-semibold text-lg mb-1">All-in-One Platform</h4>
+          <p>Manage your projects, billing, and communications effortlessly.</p>
+        </li>
+        <li>
+          <h4 class="font-semibold text-lg mb-1">Discover How Matching Works</h4>
+          <p>See how our proprietary AI technology finds the perfect clients for your skills.</p>
+        </li>
+      </ul>
+      <div class="mt-8 text-center">
+        <a href="#explore" class="inline-block bg-yellow-400 text-blue-900 font-bold py-3 px-8 rounded shadow hover:bg-yellow-300 transition">
+          EXPLORE OUR PLATFORM
+        </a>
+      </div>
+    </div>
+  </div>
+
+  <hr class="my-16 border-blue-300">
+
+  <div class="text-center mb-12">
+    <h3 class="text-3xl font-extrabold mb-6">Proven Results</h3>
+    <div class="grid grid-cols-2 md:grid-cols-4 gap-8 max-w-5xl mx-auto font-bold">
+      <div class="text-4xl">15,000+</div>
+      <div class="text-4xl">900+</div>
+      <div class="text-4xl">500,000+</div>
+      <div class="text-4xl">Top 25%</div>
+      <div class="text-sm font-normal text-blue-800">Average annual contract per client</div>
+      <div class="text-sm font-normal text-blue-800">Proposals won last year by experts</div>
+      <div class="text-sm font-normal text-blue-800">Annual earnings of top experts</div>
+      <div class="text-sm font-normal text-blue-800">Of prospects qualified & introduced to you</div>
+    </div>
+  </div>
+
+  <hr class="my-16 border-blue-300">
+
+  <div class="max-w-4xl mx-auto">
+    <h3 class="text-3xl font-extrabold mb-8 text-center">How to Join VCReady</h3>
+    <ol class="list-decimal list-inside space-y-6 text-blue-900 text-lg">
+      <li>
+        <strong>Application</strong><br>
+        We review your experience, certifications, and skills to ensure a great fit.
+      </li>
+      <li>
+        <strong>Interview & Assessment</strong><br>
+        Interviews and skill assessments confirm your expertise and soft skills.
+      </li>
+      <li>
+        <strong>Verification</strong><br>
+        Background and credential checks are performed for your and our client’s security.
+      </li>
+      <li>
+        <strong>Onboarding</strong><br>
+        Our Success Team guides you through the platform setup and business-building process.
+      </li>
+    </ol>
+  </div>
+
+  <div class="mt-12 max-w-3xl mx-auto text-center">
+    <blockquote class="italic text-blue-800 mb-6">
+      “Joining VCReady connected me to projects perfectly matched to my skills and helped me grow my career.”
+    </blockquote>
+    <p class="font-semibold text-blue-900">— Robert, FP&A Expert</p>
+  </div>
+
+  <hr class="my-16 border-blue-300">
+
+  <div class="text-center max-w-4xl mx-auto">
+    <h3 class="text-3xl font-extrabold mb-8">Join VCReady’s Network of Finance and Accounting Experts</h3>
+    <p class="mb-8 max-w-3xl mx-auto">
+      Access premium clients and projects that help you build your career and income.
+    </p>
+    <a href="#apply" class="inline-block bg-yellow-400 text-blue-900 font-bold py-3 px-8 rounded shadow hover:bg-yellow-300 transition">
+      Apply Now
+    </a>
+  </div>
+
+  <section id="faq" class="mt-16 max-w-4xl mx-auto">
+    <h3 class="text-3xl font-extrabold mb-8 text-center">FAQ</h3>
+    <div class="space-y-4 text-blue-900">
+      <details class="border border-blue-300 rounded p-4">
+        <summary class="cursor-pointer font-semibold">Is there a fee to join the network?</summary>
+        <p class="mt-2">No, joining our expert network is free.</p>
+      </details>
+      <details class="border border-blue-300 rounded p-4">
+        <summary class="cursor-pointer font-semibold">Do I need specific qualifications?</summary>
+        <p class="mt-2">Relevant experience and certifications are required for your service area.</p>
+      </details>
+      <details class="border border-blue-300 rounded p-4">
+        <summary class="cursor-pointer font-semibold">Are there 1099 or W2 opportunities?</summary>
+        <p class="mt-2">We primarily offer 1099 contractor roles; some clients may require W2.</p>
+      </details>
+      <details class="border border-blue-300 rounded p-4">
+        <summary class="cursor-pointer font-semibold">Can I work remotely, onsite, or hybrid?</summary>
+        <p class="mt-2">Flexible work arrangements depend on client preferences.</p>
+      </details>
+      <details class="border border-blue-300 rounded p-4">
+        <summary class="cursor-pointer font-semibold">Is professional liability insurance required?</summary>
+        <p class="mt-2">Yes, proof of insurance is required during onboarding.</p>
+      </details>
+    </div>
+  </section>
+</section>
+  
  <!-- Bottom Strip -->
 <footer>
   <div class="border-t border-gray-700 mt-10 pt-6 text-center text-xs text-gray-500 px-6">
