--- a/index.html
+++ b/index.html
@@ -331,17 +331,26 @@
   </div>
 
   <!-- Signature Framework -->
-  <div class="flex flex-col md:flex-row items-center gap-10">
-    <img src="https://via.placeholder.com/400x250?text=VC-Ready+Framework" alt="VC-Ready Model Builder Framework" class="rounded-lg shadow-lg max-w-full md:w-1/2" />
-    <div class="md:w-1/2 text-blue-900">
-      <h3 class="text-2xl font-extrabold mb-4">The VC-Ready Model Builder™ Framework</h3>
-      <p class="mb-4 text-lg leading-relaxed">Our proprietary framework guides founders through every step of building investor-grade financial models — from risk analysis to scenario planning — ensuring you’re fully prepared to impress VCs and accelerate your fundraising.</p>
-      <a href="#scorecard" class="inline-block bg-yellow-400 text-blue-900 font-bold py-3 px-6 rounded hover:bg-yellow-300 transition">
-        → Take the Funding Risk Audit™ Quiz
-      </a>
-    </div>
+<section id="framework" class="flex flex-col md:flex-row items-center gap-10 py-12 px-6 max-w-7xl mx-auto">
+  <img
+    src="https://via.placeholder.com/400x250?text=VC-Ready+Framework"
+    alt="VC-Ready Model Builder Framework"
+    class="rounded-lg shadow-lg max-w-full md:w-1/2"
+  />
+  <div class="md:w-1/2 text-blue-900">
+    <h3 class="text-2xl font-extrabold mb-4">The VC-Ready Model Builder™ Framework</h3>
+    <p class="mb-4 text-lg leading-relaxed">
+      Our proprietary framework guides founders through every step of building investor-grade financial models — from risk analysis to scenario planning — ensuring you’re fully prepared to impress VCs and accelerate your fundraising.
+    </p>
+    <a
+      href="#scorecard"
+      class="inline-block bg-yellow-400 text-blue-900 font-bold py-3 px-6 rounded hover:bg-yellow-300 transition"
+    >
+      → Take the Funding Risk Audit™ Quiz
+    </a>
   </div>
 </section>
+
 <!-- OFFER LADDER SECTION -->
 <section id="offers" class="bg-blue-900 py-20 px-6 md:px-16 lg:px-32 max-w-6xl mx-auto text-white">
   <h2 class="text-3xl font-extrabold mb-12 text-center">Investor-Calibrated Offer Ladder</h2>
