--- a/index.html
+++ b/index.html
@@ -428,6 +428,17 @@
     </div>
 
   </div>
+
+<!-- Mentor Thank You QR Code -->
+<section id="mentor-thank-you" class="text-center py-12">
+  <h2 class="text-2xl font-semibold mb-4">Thank You for Your Mentorship</h2>
+  <p class="mb-6">Scan the QR code below to access your personalized mentor recognition page:</p>
+  <img
+    src="https://media.licdn.com/dms/image/v2/D4E22AQGsbYrnAlDqxA/feedshare-shrink_1280/B4EZcxRS9qHkAs-/0/1748878308808?e=1752105600&v=beta&t=4yr10xgQNgsP-g3FhqG2CoEtm4RoXi6wjRiYBX7JDho"
+    alt="Mentor Thank You QR Code"
+    class="max-w-xs mx-auto rounded-lg shadow-lg"
+  />
+</section>
   
  <!-- Bottom Strip -->
 <footer>
