--- a/index.html
+++ b/index.html
@@ -351,6 +351,56 @@
   </div>
 </section>
 
+<!-- Pricing Section -->
+<section id="pricing" class="bg-blue-50 py-12 px-6 max-w-7xl mx-auto rounded-lg shadow-lg mt-16">
+  <h3 class="text-2xl font-extrabold text-blue-900 mb-6 text-center">Pricing</h3>
+  <div class="grid grid-cols-1 md:grid-cols-3 gap-8 text-blue-900">
+    <div class="bg-white p-6 rounded-lg shadow-md text-center">
+      <h4 class="font-bold text-xl mb-4">Starter</h4>
+      <p class="mb-6">Basic financial model review & feedback</p>
+      <p class="text-3xl font-extrabold mb-4">$499</p>
+      <a href="#booking" class="inline-block bg-yellow-400 text-blue-900 font-bold py-2 px-6 rounded hover:bg-yellow-300 transition">
+        Select Plan
+      </a>
+    </div>
+    <div class="bg-white p-6 rounded-lg shadow-md text-center border-4 border-yellow-400">
+      <h4 class="font-bold text-xl mb-4">Professional</h4>
+      <p class="mb-6">Full model building & risk analysis support</p>
+      <p class="text-3xl font-extrabold mb-4">$1,499</p>
+      <a href="#booking" class="inline-block bg-yellow-400 text-blue-900 font-bold py-2 px-6 rounded hover:bg-yellow-300 transition">
+        Select Plan
+      </a>
+    </div>
+    <div class="bg-white p-6 rounded-lg shadow-md text-center">
+      <h4 class="font-bold text-xl mb-4">Enterprise</h4>
+      <p class="mb-6">Custom solutions & ongoing VC fundraising coaching</p>
+      <p class="text-3xl font-extrabold mb-4">Contact Us</p>
+      <a href="#booking" class="inline-block bg-yellow-400 text-blue-900 font-bold py-2 px-6 rounded hover:bg-yellow-300 transition">
+        Contact Sales
+      </a>
+    </div>
+  </div>
+</section>
+
+<!-- Smooth Scroll with Sticky Nav Offset -->
+<script>
+  document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+    anchor.addEventListener('click', function (e) {
+      e.preventDefault();
+      const targetId = this.getAttribute('href').substring(1);
+      const target = document.getElementById(targetId);
+      const navHeight = document.querySelector('.sticky-nav').offsetHeight;
+
+      if (target) {
+        window.scrollTo({
+          top: target.offsetTop - navHeight - 10, // 10px extra padding
+          behavior: 'smooth'
+        });
+      }
+    });
+  });
+</script>
+
 <!-- OFFER LADDER SECTION -->
 <section id="offers" class="bg-blue-900 py-20 px-6 md:px-16 lg:px-32 max-w-6xl mx-auto text-white">
   <h2 class="text-3xl font-extrabold mb-12 text-center">Investor-Calibrated Offer Ladder</h2>
