--- a/index.html
+++ b/index.html
@@ -352,35 +352,54 @@
 </section>
 
 <!-- Pricing Section -->
-<section id="pricing" class="bg-blue-50 py-12 px-6 max-w-7xl mx-auto rounded-lg shadow-lg mt-16">
-  <h3 class="text-2xl font-extrabold text-blue-900 mb-6 text-center">Pricing</h3>
-  <div class="grid grid-cols-1 md:grid-cols-3 gap-8 text-blue-900">
-    <div class="bg-white p-6 rounded-lg shadow-md text-center">
-      <h4 class="font-bold text-xl mb-4">Starter</h4>
-      <p class="mb-6">Basic financial model review & feedback</p>
-      <p class="text-3xl font-extrabold mb-4">$499</p>
-      <a href="#booking" class="inline-block bg-yellow-400 text-blue-900 font-bold py-2 px-6 rounded hover:bg-yellow-300 transition">
-        Select Plan
-      </a>
-    </div>
-    <div class="bg-white p-6 rounded-lg shadow-md text-center border-4 border-yellow-400">
-      <h4 class="font-bold text-xl mb-4">Professional</h4>
-      <p class="mb-6">Full model building & risk analysis support</p>
-      <p class="text-3xl font-extrabold mb-4">$1,499</p>
-      <a href="#booking" class="inline-block bg-yellow-400 text-blue-900 font-bold py-2 px-6 rounded hover:bg-yellow-300 transition">
-        Select Plan
-      </a>
-    </div>
-    <div class="bg-white p-6 rounded-lg shadow-md text-center">
-      <h4 class="font-bold text-xl mb-4">Enterprise</h4>
-      <p class="mb-6">Custom solutions & ongoing VC fundraising coaching</p>
-      <p class="text-3xl font-extrabold mb-4">Contact Us</p>
-      <a href="#booking" class="inline-block bg-yellow-400 text-blue-900 font-bold py-2 px-6 rounded hover:bg-yellow-300 transition">
-        Contact Sales
-      </a>
+<section id="pricing" class="py-16 px-6 md:px-16 lg:px-32 bg-blue-50">
+  <div class="max-w-5xl mx-auto text-center">
+    <h2 class="text-3xl font-extrabold text-blue-900 mb-4">Simple Pricing, Built for Startups</h2>
+    <p class="text-blue-800 mb-12">Choose the plan that matches your current fundraising stage — and scale when you're ready.</p>
+
+    <div class="grid md:grid-cols-3 gap-8">
+      <!-- Starter Plan -->
+      <div class="bg-white rounded-xl p-6 shadow-md transform hover:scale-105 hover:shadow-lg transition duration-300">
+        <h3 class="text-xl font-bold text-blue-900 mb-2">Starter</h3>
+        <p class="text-sm text-blue-800 mb-4">For founders who want expert feedback before investor outreach.</p>
+        <p class="text-3xl font-extrabold text-yellow-400 mb-4">$499</p>
+        <ul class="text-sm text-blue-700 mb-6 space-y-2 text-left">
+          <li> Expert financial model review</li>
+          <li> Detailed written feedback</li>
+          <li> 30-min feedback call</li>
+        </ul>
+        <a href="#booking" class="bg-yellow-400 text-blue-900 font-semibold py-2 px-4 rounded hover:bg-yellow-300 transition">Select Plan</a>
+      </div>
+
+      <!-- Professional Plan -->
+      <div class="bg-white rounded-xl p-6 shadow-md transform hover:scale-105 hover:shadow-lg transition duration-300 border-2 border-yellow-400">
+        <h3 class="text-xl font-bold text-blue-900 mb-2">Professional</h3>
+        <p class="text-sm text-blue-800 mb-4">End-to-end support to build a VC-ready financial model that sells your story.</p>
+        <p class="text-3xl font-extrabold text-yellow-400 mb-4">$1,499</p>
+        <ul class="text-sm text-blue-700 mb-6 space-y-2 text-left">
+          <li> Full model build from scratch or overhaul</li>
+          <li> Growth scenario planning</li>
+          <li> Risk analysis + investor proofing</li>
+        </ul>
+        <a href="#booking" class="bg-yellow-400 text-blue-900 font-semibold py-2 px-4 rounded hover:bg-yellow-300 transition">Select Plan</a>
+      </div>
+
+      <!-- Enterprise Plan -->
+      <div class="bg-white rounded-xl p-6 shadow-md transform hover:scale-105 hover:shadow-lg transition duration-300">
+        <h3 class="text-xl font-bold text-blue-900 mb-2">Enterprise</h3>
+        <p class="text-sm text-blue-800 mb-4">Custom solutions for high-growth startups seeking ongoing advisory and fundraising support.</p>
+        <p class="text-3xl font-extrabold text-yellow-400 mb-4">Contact Us</p>
+        <ul class="text-sm text-blue-700 mb-6 space-y-2 text-left">
+          <li> Ongoing CFO coaching</li>
+          <li> Custom fundraising support</li>
+          <li> Quarterly model & traction updates</li>
+        </ul>
+        <a href="#booking" class="bg-yellow-400 text-blue-900 font-semibold py-2 px-4 rounded hover:bg-yellow-300 transition">Contact Sales</a>
+      </div>
     </div>
   </div>
 </section>
+
 
 <!-- Smooth Scroll with Sticky Nav Offset -->
 <script>
