--- a/index.html
+++ b/index.html
@@ -352,54 +352,80 @@
 </section>
 
 <!-- Pricing Section -->
-<section id="pricing" class="py-16 px-6 md:px-16 lg:px-32 bg-blue-50">
+<section id="pricing" class="py-20 px-6 md:px-16 lg:px-32 bg-blue-50">
   <div class="max-w-5xl mx-auto text-center">
     <h2 class="text-3xl font-extrabold text-blue-900 mb-4">Simple Pricing, Built for Startups</h2>
     <p class="text-blue-800 mb-12">Choose the plan that matches your current fundraising stage — and scale when you're ready.</p>
 
-    <div class="grid md:grid-cols-3 gap-8">
-      <!-- Starter Plan -->
-      <div class="bg-white rounded-xl p-6 shadow-md transform hover:scale-105 hover:shadow-lg transition duration-300">
+    <!-- Plan Tiers -->
+    <div class="grid md:grid-cols-3 gap-8 mb-16">
+      <!-- Starter -->
+      <div class="bg-white rounded-xl p-6 shadow-md transform hover:scale-105 hover:shadow-lg transition duration-300" data-aos="fade-up">
         <h3 class="text-xl font-bold text-blue-900 mb-2">Starter</h3>
-        <p class="text-sm text-blue-800 mb-4">For founders who want expert feedback before investor outreach.</p>
+        <p class="text-sm text-blue-800 mb-4">Get an expert review and actionable insights before pitching investors.</p>
         <p class="text-3xl font-extrabold text-yellow-400 mb-4">$499</p>
         <ul class="text-sm text-blue-700 mb-6 space-y-2 text-left">
-          <li> Expert financial model review</li>
-          <li> Detailed written feedback</li>
-          <li> 30-min feedback call</li>
+          <li>   Financial model review</li>
+          <li>   Detailed written feedback</li>
+          <li>   30-min expert call</li>
         </ul>
-        <a href="#booking" class="bg-yellow-400 text-blue-900 font-semibold py-2 px-4 rounded hover:bg-yellow-300 transition">Select Plan</a>
+        <a href="mailto:nexlifysolutions.team@gmail.com?subject=Starter%20Plan%20Inquiry" class="bg-yellow-400 text-blue-900 font-semibold py-2 px-4 rounded hover:bg-yellow-300 transition">Select Plan</a>
       </div>
 
-      <!-- Professional Plan -->
-      <div class="bg-white rounded-xl p-6 shadow-md transform hover:scale-105 hover:shadow-lg transition duration-300 border-2 border-yellow-400">
+      <!-- Professional -->
+      <div class="bg-white rounded-xl p-6 shadow-md transform hover:scale-105 hover:shadow-lg transition duration-300 border-2 border-yellow-400" data-aos="fade-up" data-aos-delay="100">
         <h3 class="text-xl font-bold text-blue-900 mb-2">Professional</h3>
-        <p class="text-sm text-blue-800 mb-4">End-to-end support to build a VC-ready financial model that sells your story.</p>
+        <p class="text-sm text-blue-800 mb-4">Build a VC-grade financial model that shows traction, risk, and scale potential.</p>
         <p class="text-3xl font-extrabold text-yellow-400 mb-4">$1,499</p>
         <ul class="text-sm text-blue-700 mb-6 space-y-2 text-left">
-          <li> Full model build from scratch or overhaul</li>
-          <li> Growth scenario planning</li>
-          <li> Risk analysis + investor proofing</li>
+          <li>  Model built or overhauled from scratch</li>
+          <li>  Growth scenario planning</li>
+          <li>  Investor risk-proofing</li>
         </ul>
-        <a href="#booking" class="bg-yellow-400 text-blue-900 font-semibold py-2 px-4 rounded hover:bg-yellow-300 transition">Select Plan</a>
+        <a href="mailto:nexlifysolutions.team@gmail.com?subject=Professional%20Plan%20Inquiry" class="bg-yellow-400 text-blue-900 font-semibold py-2 px-4 rounded hover:bg-yellow-300 transition">Select Plan</a>
       </div>
 
-      <!-- Enterprise Plan -->
-      <div class="bg-white rounded-xl p-6 shadow-md transform hover:scale-105 hover:shadow-lg transition duration-300">
+      <!-- Enterprise -->
+      <div class="bg-white rounded-xl p-6 shadow-md transform hover:scale-105 hover:shadow-lg transition duration-300" data-aos="fade-up" data-aos-delay="200">
         <h3 class="text-xl font-bold text-blue-900 mb-2">Enterprise</h3>
-        <p class="text-sm text-blue-800 mb-4">Custom solutions for high-growth startups seeking ongoing advisory and fundraising support.</p>
+        <p class="text-sm text-blue-800 mb-4">For startups scaling fast — hands-on fundraising guidance and CFO support.</p>
         <p class="text-3xl font-extrabold text-yellow-400 mb-4">Contact Us</p>
         <ul class="text-sm text-blue-700 mb-6 space-y-2 text-left">
-          <li> Ongoing CFO coaching</li>
-          <li> Custom fundraising support</li>
-          <li> Quarterly model & traction updates</li>
+          <li>  Ongoing CFO-level advisory</li>
+          <li>  Custom financial modeling</li>
+          <li>  Fundraising + investor comms</li>
         </ul>
-        <a href="#booking" class="bg-yellow-400 text-blue-900 font-semibold py-2 px-4 rounded hover:bg-yellow-300 transition">Contact Sales</a>
+        <a href="mailto:nexlifysolutions.team@gmail.com?subject=Enterprise%20Plan%20Inquiry" class="bg-yellow-400 text-blue-900 font-semibold py-2 px-4 rounded hover:bg-yellow-300 transition">Contact Sales</a>
+      </div>
+    </div>
+
+    <!-- Offer Ladder Section -->
+    <div class="mt-12 text-left space-y-10" data-aos="fade-up" data-aos-delay="300">
+      <h3 class="text-2xl font-extrabold text-blue-900 text-center mb-6">Investor-Calibrated Offer Ladder</h3>
+
+      <!-- Offer 1 -->
+      <div class="bg-white rounded-xl p-6 shadow-md hover:shadow-lg transition transform hover:scale-105">
+        <h4 class="text-lg font-semibold text-blue-900 mb-2">Funding Risk Audit™ – <span class="text-yellow-500 font-bold">$799</span></h4>
+        <p class="text-sm text-blue-800 mb-2">Pinpoint the gaps in your fundraising strategy with a VC lens. Get a custom action plan to reduce risk and win investor confidence.</p>
+        <a href="#scorecard" class="text-blue-700 underline font-medium hover:text-yellow-500">→ Take the Audit Quiz</a>
+      </div>
+
+      <!-- Offer 2 -->
+      <div class="bg-white rounded-xl p-6 shadow-md hover:shadow-lg transition transform hover:scale-105">
+        <h4 class="text-lg font-semibold text-blue-900 mb-2">VC-Ready Model Builder™ – <span class="text-yellow-500 font-bold">$2,499</span></h4>
+        <p class="text-sm text-blue-800 mb-2">Investor-grade financial modeling framework with revenue levers, stress tests, and pitch-aligned forecasts.</p>
+        <a href="#framework" class="text-blue-700 underline font-medium hover:text-yellow-500">→ Build Your Model</a>
+      </div>
+
+      <!-- Offer 3 -->
+      <div class="bg-white rounded-xl p-6 shadow-md hover:shadow-lg transition transform hover:scale-105">
+        <h4 class="text-lg font-semibold text-blue-900 mb-2">Smart Scale CFO™ – <span class="text-yellow-500 font-bold">Monthly Retainer</span></h4>
+        <p class="text-sm text-blue-800 mb-2">Ongoing strategic finance leadership tailored to high-growth startups — fundraising support, cashflow, ops & investor relations.</p>
+        <a href="#booking" class="text-blue-700 underline font-medium hover:text-yellow-500">→ Schedule a Consultation</a>
       </div>
     </div>
   </div>
 </section>
-
 
 <!-- Smooth Scroll with Sticky Nav Offset -->
 <script>
