--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <!-- AOS -->
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
   <!-- Custom Styles -->
   <style>
@@ -553,9 +554,11 @@
 </style>
 
 
-  <!-- AOS Initialization Fix -->
-  <script>
-    AOS.init();
-  </script>
+  <!-- AOS JS and Initialization -->
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+  AOS.init();
+</script>
 </body>
 </html>
+
