--- a/index.html
+++ b/index.html
@@ -466,13 +466,19 @@
 
 <!-- Mentor Thank You QR Code -->
 <section id="mentor-thank-you" class="text-center py-12">
-  <h2 class="text-2xl font-semibold mb-4">Thank You for Your Mentorship</h2>
-  <p class="mb-6">Scan the QR code below to access your personalized mentor recognition page:</p>
+  <h2 class="text-3xl font-bold mb-4 text-indigo-700">
+    Honoring Our Mentors — Your Guidance Shapes Tomorrow’s Leaders
+  </h2>
+  <p class="mb-6 text-lg text-gray-800">
+    Your expertise fuels innovation and growth. Discover the stories of founders you’ve helped accelerate.
+  </p>
   <img
     src="https://media.licdn.com/dms/image/v2/D4E22AQGsbYrnAlDqxA/feedshare-shrink_1280/B4EZcxRS9qHkAs-/0/1748878308808?e=1752105600&v=beta&t=4yr10xgQNgsP-g3FhqG2CoEtm4RoXi6wjRiYBX7JDho"
-    alt="Mentor Thank You QR Code"
+    alt="Scan this QR code to see personalized mentor appreciation and impact stories"
     class="max-w-xs mx-auto rounded-lg shadow-lg"
   />
+  <p class="mt-4 text-gray-700 italic">Scan to explore your impact</p>
+  <p class="mt-2 text-sm text-gray-500">Tip: Use your phone camera or QR scanner app to unlock your recognition.</p>
 </section>
   
  <!-- Bottom Strip -->
