--- a/index.html
+++ b/index.html
@@ -477,9 +477,12 @@
     alt="Scan this QR code to see personalized mentor appreciation and impact stories"
     class="max-w-xs mx-auto rounded-lg shadow-lg"
   />
-  <p class="mt-4 text-gray-700 italic">Scan to explore your impact</p>
+  <p class="mt-4 text-gray-700 italic">
+    Scan to explore your impact or visit our <a href="https://www.linkedin.com/posts/founder-institute-nigeria_founderinstitute-founderinstsitutelagos-filagos-activity-7335327294355357700-iDDf?utm_source=share&utm_medium=member_desktop&rcm=ACoAAB2EeJ8BvZx7hSUAyADlbYghVUpr8EQS7BM" target="_blank" rel="noopener noreferrer" class="text-indigo-600 hover:underline">Mentor Thank You on LinkedIn</a>.
+  </p>
   <p class="mt-2 text-sm text-gray-500">Tip: Use your phone camera or QR scanner app to unlock your recognition.</p>
 </section>
+
   
  <!-- Bottom Strip -->
 <footer>
