--- a/index.html
+++ b/index.html
@@ -374,17 +374,19 @@
       </div>
 
       <!-- Professional -->
-      <div class="bg-white rounded-xl p-6 shadow-md transform hover:scale-105 hover:shadow-lg transition duration-300 border-2 border-yellow-400" data-aos="fade-up" data-aos-delay="100">
-        <h3 class="text-xl font-bold text-blue-900 mb-2">Professional</h3>
-        <p class="text-sm text-blue-800 mb-4">Build a VC-grade financial model that shows traction, risk, and scale potential.</p>
-        <p class="text-3xl font-extrabold text-yellow-400 mb-4">$1,499</p>
-        <ul class="text-sm text-blue-700 mb-6 space-y-2 text-left">
-          <li>  Model built or overhauled from scratch</li>
-          <li>  Growth scenario planning</li>
-          <li>  Investor risk-proofing</li>
-        </ul>
-        <a href="mailto:nexlifysolutions.team@gmail.com?subject=Professional%20Plan%20Inquiry" class="bg-yellow-400 text-blue-900 font-semibold py-2 px-4 rounded hover:bg-yellow-300 transition">Select Plan</a>
-      </div>
+<div class="bg-white rounded-xl p-6 shadow-md transform hover:scale-105 hover:shadow-lg transition duration-300 border-2 border-yellow-400 relative" data-aos="fade-up" data-aos-delay="100">
+  <span class="absolute top-0 right-0 bg-yellow-300 text-xs font-bold px-2 py-1 rounded-bl">Most Popular</span>
+  <h3 class="text-xl font-bold text-blue-900 mb-2">Professional</h3>
+  <p class="text-sm text-blue-800 mb-4">Build a VC-grade financial model that shows traction, risk, and scale potential.</p>
+  <p class="text-3xl font-extrabold text-yellow-400 mb-4">$1,499</p>
+  <ul class="text-sm text-blue-700 mb-6 space-y-2 text-left">
+    <li>   Model built or overhauled from scratch</li>
+    <li>   Growth scenario planning</li>
+    <li>   Investor risk-proofing</li>
+  </ul>
+  <a href="mailto:nexlifysolutions.team@gmail.com?subject=Professional%20Plan%20Inquiry" class="bg-yellow-400 text-blue-900 font-semibold py-2 px-4 rounded hover:bg-yellow-300 transition">Select Plan</a>
+</div>
+
 
       <!-- Enterprise -->
       <div class="bg-white rounded-xl p-6 shadow-md transform hover:scale-105 hover:shadow-lg transition duration-300" data-aos="fade-up" data-aos-delay="200">
