--- a/index.html
+++ b/index.html
@@ -487,13 +487,13 @@
 <section id="mentor-thank-you" class="bg-white py-20 px-6 text-center relative overflow-hidden">
   <!-- Animated Heading -->
   <h2 class="mentor-heading text-3xl md:text-4xl font-extrabold mb-6 text-indigo-700 leading-snug tracking-tight">
-    Honoring Our Mentors —<br class="hidden md:inline" />
-    Your Guidance Shapes Tomorrow’s Leaders
+     Mentor —<br class="hidden md:inline" />
+        Honor Roll
   </h2>
 
   <!-- Supporting Copy -->
   <p class="mb-8 text-lg text-gray-700 max-w-2xl mx-auto leading-relaxed">
-    Your expertise fuels innovation and growth. This recognition is a small reflection of the lasting impact you're making on the next generation of founders.
+    Insight moves ideas forward.
   </p>
 
   <!-- QR Code -->
